--- a/facapedidos/application/modules/estabelecimento/views/layouts/layout.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/layouts/layout.phtml
@@ -16,6 +16,11 @@
 			<div id="titulos">
 				<img src="<?php echo $this->baseUrl("/img/subway.jpg")?>" >
 				<h1>Bem-vindo(a), <i>Christian Pior</i> - <small><a href="/estabelecimento/auth/logout">(sair)</a></small></h1>
+
+                                <a href="/estabelecimento/empresa">(Empresa)</a> <br>
+                                <a href="/estabelecimento/funcionario">(Funcionario)</a> <br>
+                                <a href="/estabelecimento/ingredients">(Ingrediente)</a> <br>
+                                <a href="/estabelecimento/produto">(Produto)</a>
 			</div>
 			<div id="infos">
 				<img id="faturamento" src="<?php echo $this->baseUrl("/img/Coins.png")?>">
