--- a/facapedidos/application/modules/estabelecimento/views/scripts/empresa/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/empresa/index.phtml
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="<?php echo $this->baseUrl() ?>/js/empresa.js"></script>
+
+
 <h2><?php echo $this->headline; ?></h2>
 <div id="tabs" style="width: 714px;">
     <ul>
@@ -23,16 +26,22 @@
                                 </tr>
                                 <tr>
                                     <td> CNPJ </td>
-                                    <td><input type="text" class="input-medium"  name="cnpj" maxlength="14" value="<?php echo $this->formData['cnpj'] ?>" style="width: 200px;">
+                                    <td><input type="text" class="input-medium RQR required" title="Por favor, indique um CNPJ." name="cnpj" maxlength="14" value="<?php echo $this->formData['cnpj'] ?>" style="width: 200px;">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                 </tr>
                                 <tr>
                                     <td valign="top"> URL</td>
                                     <td valign="top"> http://facapeido/
-                                        <input type="text" class="input-medium validAlphaNumeric ajaxcheck"  name="url" id='<?php echo $this->formData['cod_empresa'] ?>' maxlength="10" value="<?php echo $this->formData['url'] ?>" style="width: 200px;">
+
+                                        <!--
+                                        Antes estava assim. Eu desabilitei essa verificacao que ocorria somente na submissao e fiz outra que valida na tela.
+                                        Dessa forma pude retirar esse codigo de validacao ajax do arquivo validation-new tornando-o mais enxuto.
+                                        <input type="text" class="input-medium validAlphaNumeric ajaxcheck"  name="url" id='<?php //echo $this->formData['cod_empresa'] ?>' maxlength="10" value="<?php //echo $this->formData['url'] ?>" style="width: 200px;">  -->
+
+                                        <input type="text" class="input-medium validAlphaNumeric RQR required" title='Por favor, indique uma URL.' onblur="checkUrl(this,<?php echo $this->formData['cod_empresa'] ?>);" name="url" maxlength="10" value="<?php echo $this->formData['url'] ?>" style="width: 200px;">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing' id='spanUrl'></span></div>
                                         <br>
-                                        A url e como o site sera acessado pelos seus clientes</td>
+                                        A url é como o site sera acessado pelos seus clientes</td>
                                 </tr>
                             </table></td>
 
@@ -126,7 +135,7 @@
 
     <div id="tabs-2">
         <div class="contentForm">
-            <form action="<?php echo $this->baseUrl() ?>/estabelecimento/empresa/add" method="post" class="frm" id='form2'>
+            <form action="<?php echo $this->baseUrl() ?>/estabelecimento/empresa/add" method="post" class="frm" id='form2' onsubmit="return validateForm('form2');">
                 <fieldset style=" margin: 0; padding: 0;">
                     <legend>Tipos de produtos:</legend>
                     <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
@@ -157,10 +166,11 @@
                                         }
                                 ?>
                                         <td>
-                                            <input type="checkbox" name="cod_tipo_produto[]" value="<?php echo $cod_tipo_produto ?>" <?php echo $checked ?> class="checkMax"> <?php echo $this->cod_tipo_produto[$cod_tipo_produto] ?>
-                                      
-                                            <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+                                            <input type="checkbox" onchange="checkTipoProdutoDeletion(this,<?php echo $this->empresaId; ?>);" name="cod_tipo_produto[]" value="<?php echo $cod_tipo_produto ?>" <?php echo $checked ?> class=""> <?php echo $this->cod_tipo_produto[$cod_tipo_produto] ?>
                                         </td>
+                                        <tr><td>
+                                            <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing' id='spanTipoProduto'></span></div>
+                                        </td></tr>
 <?php if ($i >= 2)
                                         {
                                             echo '</tr><tr>';
