--- a/facapedidos/application/modules/estabelecimento/views/scripts/empresa/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/empresa/index.phtml
@@ -25,13 +25,13 @@
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                 </tr>
                                 <tr>
-                                    <td> CNPJ </td>
-                                    <td><input type="text" class="input-medium RQR required" title="Por favor, indique um CNPJ." name="cnpj" maxlength="14" value="<?php echo $this->formData['cnpj'] ?>" style="width: 200px;">
+                                    <td> CNPJ (apenas números)</td>
+                                    <td><input type="text" class="input-medium RQR required validNumber" title="Por favor, indique um CNPJ." name="cnpj" maxlength="14" value="<?php echo $this->formData['cnpj'] ?>" style="width: 200px;">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                 </tr>
                                 <tr>
                                     <td valign="top"> URL</td>
-                                    <td valign="top"> http://facapeido/
+                                    <td valign="top"> http://facapedido/
 
                                         <!--
                                         Antes estava assim. Eu desabilitei essa verificacao que ocorria somente na submissao e fiz outra que valida na tela.
@@ -49,10 +49,15 @@
 { ?>
                             <span id='image'><img src="<?php echo $this->baseUrl() ?>/estabelecimento/empresa/get-Image/id/<?php echo $this->formData['cod_empresa'] ?>" width="151" height="141" alt=""></span><br>
                             <span id='changeImage' style="display: none;">
-                                <input type="file" name="userfile">
+                                <input type="file" name="userfile" id="userfile">
                                 <br>
-                                <span onclick="toggleImage2()" id='labelChangeCancel' style="cursor: pointer; color: maroon;">Cancel</span></span><br>
-                            <span onclick="toggleImage()" id='labelChange' style="cursor: pointer; color: blue;">Change</span>
+                            </span>
+                            <span onclick="toggleImage2()" id='labelChangeCancel' style="cursor: pointer; color: maroon;display:none;">Cancela</span>
+
+                            <br>
+                            <span onclick="toggleImage()" id='labelChange' style="cursor: pointer; color: blue;">Trocar</span>
+                            <span onclick="removeImage()" id='labelRemove' style="cursor: pointer; color: blue;">Remover</span>
+                            <input type="hidden" value="" name="flagRemoverImagem" id="flagRemoverImagem">
 <?php } else
 {
  ?>
@@ -66,20 +71,20 @@
 {
     echo 'checked';
 } ?>>
-                            Ativa? </td>
+                            Empresa ativa? </td>
                     </tr>
                     <tr>
                         <td colspan="2"> Email
-                            <input type="text" class="input-medium validEmail" maxlength="20"  name="email" value="<?php echo $this->formData['email'] ?>" style="width: 200px;">
+                            <input type="text" class="input-medium validEmail" maxlength="50"  name="email" value="<?php echo $this->formData['email'] ?>" style="width: 200px;">
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                         <td colspan="3"> Valor minimo para enterega *
-                            <input type="text"   name="valor_minimo_entrega" maxlength="14" value="<?php echo $this->formData['valor_minimo_entrega'] ?>" style="width: 200px;" class="input-medium RQR required"  title='Por favor, indique Valor minimo para enterega'>
+                            <input type="text"   name="valor_minimo_entrega" maxlength="14" value="<?php echo $this->formData['valor_minimo_entrega'] ?>" style="width: 200px;" class="input-medium RQR required validDecimalNumber"  title='Por favor, indique Valor minimo para enterega'>
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                     </tr>
                 </table>
 
                 <fieldset style=" margin: 0; padding: 0;">
-                    <legend>Endereco:</legend>
+                    <legend>Endereço:</legend>
                     <table class="tableFrm" cellspacing="8" cellpadding="0" border="0">
                         <tr>
                             <td> Logradouro *&nbsp;&nbsp;&nbsp;<br>
@@ -92,17 +97,17 @@
                         <tr>
                             <td  > Complemento<br>
                                 <input type="text" class="input-medium"  name="complemento" maxlength="20" value="<?php echo $this->formData['complemento'] ?>" style="width: 200px;"></td>
-                            <td colspan="2"> CEP *<br>
-                                <input type="text" class="input-medium RQR required"  title='Por favor, indique CEP' maxlength="8"  name="cep" value="<?php echo $this->formData['cep'] ?>" style="width: 200px;">
+                            <td colspan="2"> CEP (apenas números)*<br>
+                                <input type="text" class="input-medium RQR required validNumber"  title='Por favor, indique CEP' maxlength="8"  name="cep" value="<?php echo $this->formData['cep'] ?>" style="width: 200px;">
                                 <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                         </tr>
                         <tr>
                             <td> Bairro
                                 <input type="text" class="input-medium" maxlength="30" name="bairro" value="<?php echo $this->formData['bairro'] ?>" style="width: 200px;"></td>
-                            <td> Telefone1
-                                <input type="text" class="input-medium"  name="telefone1" maxlength="10" value="<?php echo $this->formData['telefone1'] ?>" style="width: 200px;"></td>
-                            <td> Telefone1
-                                <input type="text" class="input-medium"  name="telefone2" maxlength="10" value="<?php echo $this->formData['telefone2'] ?>" style="width: 200px;"></td>
+                            <td> Telefone 1
+                                <input type="text" class="input-medium"  name="telefone1" maxlength="20" value="<?php echo $this->formData['telefone1'] ?>" style="width: 200px;"></td>
+                            <td> Telefone 2
+                                <input type="text" class="input-medium"  name="telefone2" maxlength="20" value="<?php echo $this->formData['telefone2'] ?>" style="width: 200px;"></td>
                         </tr>
                         <tr>
                             <td colspan="3"> Cidade *<br>
@@ -123,8 +128,8 @@
                             <input type="submit" name="Save" value="Salvar">
                             <input type="hidden" name="empresaId" value="<?php echo $this->empresaId; ?>">
                             <input type="button" name="Save" value="Remover" onclick="delEmpresa('<?php echo $this->empresaId; ?>')">
-                            <input type="button" name="Save" value="New" onclick="location.href='<?php echo $this->baseUrl() ?>/estabelecimento/empresa/'">
-                            <input type="button" name="Save" value="Grid View" style="margin-left:  400px;" onclick="location.href='<?php echo $this->url(array('controller' => 'empresa', 'action' => 'gridView')); ?>'"></td>
+                      <!--      <input type="button" name="Save" value="New" onclick="location.href='<?php //echo $this->baseUrl() ?>/estabelecimento/empresa/'">
+                            <input type="button" name="Save" value="Grid View" style="margin-left:  400px;" onclick="location.href='<?php //echo $this->url(array('controller' => 'empresa', 'action' => 'gridView')); ?>'"></td>  -->
 
                     </tr>
                 </table>
