--- a/facapedidos/application/modules/estabelecimento/views/scripts/funcionario/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/funcionario/index.phtml
@@ -20,7 +20,7 @@
               <tr>
                 <td> Nome* <br><input type="text" class="input-medium RQR required"   name="nome" value="<?php echo $this->formData['nome']?>" maxlength="50" style="width: 200px;" title="Por favor, indique Nome">
                   <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
-                <td> CPF* (apenas números) <br><input type="text" class="input-medium validNumber RQR required"  name="cpf" minlength="11" maxlength="11" onblur="checkCPF(this,<?php echo $this->funcionarioId ?>);" value="<?php echo $this->formData['cpf']?>" style="width: 200px;" title="Por favor, indique CPF">
+                <td> CPF* (apenas números) <br><input type="text" class="input-medium validNumber RQR required"  name="cpf" minlength="11" maxlength="11" onblur="checkCPF(this,<?php  echo empty($this->funcionarioId) ? "''" : $this->funcionarioId  ?>);" value="<?php echo $this->formData['cpf']?>" style="width: 200px;" title="Por favor, indique CPF">
                   <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing' id='spanCpf'></span></div></td>
               </tr>
               <tr>
@@ -60,7 +60,7 @@
           <tr>
             <td  > Complemento<br>
               <input type="text" class="input-medium"  name="complemento" maxlength="20" value="<?php echo $this->formData['complemento']?>" style="width: 200px;"></td>
-            <td colspan="2"> CEP (apenas números) *<br>
+            <td colspan="2"> CEP* (apenas números)<br>
               <input type="text" class="input-medium RQR required validNumber"  title='Por favor, indique CEP' maxlength="8"  name="cep" value="<?php echo $this->formData['cep']?>" style="width: 200px;">
               <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
           </tr>
