--- a/facapedidos/application/modules/estabelecimento/views/scripts/funcionario/grid-view.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/funcionario/grid-view.phtml
@@ -13,13 +13,50 @@
       <td><?php echo $v['nome'] ?></td>
       <td><?php echo $v['empresa'] ?></td>
       <td><?php echo date('d-m-Y',strtotime($v['data_cadastro'])); ?></td>
-      <td><a href="<?php echo $this->baseUrl() ?>/estabelecimento/funcionario/delete/id/<?php echo $v['cod_funcionario']?>" onclick="return confirm('Are you sure you want to delete?')">Delete</a>&nbsp;&nbsp;<a href="<?php echo $this->baseUrl() ?>/estabelecimento/funcionario/edit/id/<?php echo $v['cod_funcionario']?>">Edit</a></td>
-    </tr>
+      <td><form action="" method="post" id="gridForm"> <input type="hidden" value="" name="funcionarioId" id="cod_funcionario">
+              <!-- <a href="<?php //echo $this->baseUrl() ?>/estabelecimento/funcionario/delete/id/<?php //echo $v['cod_funcionario']?>" onclick="return confirm('Are you sure you want to delete?')">Delete</a> -->
+              <a href="#" onclick="javascript:removeGrid(<?php echo $v['cod_funcionario']?>)">Excluir</a>
+              &nbsp;&nbsp;
+              <!--<a href="<?php //echo $this->baseUrl() ?>/estabelecimento/funcionario/edit/id/<?php //echo $v['cod_funcionario']?>">Edit</a> -->
+              <a href="#" onclick="javascript:editaGrid(<?php echo $v['cod_funcionario']?>)">Editar</a>
+          </form></td>
+ </tr>
     <?php }?>
     <tr class="head">
       <td colspan="6" align="right"><?php echo $paging ?></td>
     </tr>
   </table>
 </div>
+
+
+ <script type="text/javascript">
+
+    function removeGrid(valor){
+
+        if (confirm('Tem certeza que deseja remover o registro?'))
+        {
+         var url='/estabelecimento/funcionario/delete';
+         document.getElementById('gridForm').action = url;
+         document.getElementById('cod_funcionario').value = valor;
+         document.getElementById('gridForm').submit();
+        }
+
+    }
+
+  function editaGrid(valor){
+
+         var url='/estabelecimento/funcionario/edit';
+         document.getElementById('gridForm').action = url;
+         document.getElementById('cod_funcionario').value = valor;
+         document.getElementById('gridForm').submit();
+
+
+    }
+
+
+
+    </script>
+
+
 
  <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination.phtml'); ?>
