--- a/facapedidos/application/modules/estabelecimento/views/scripts/empresa/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/empresa/index.phtml
@@ -38,7 +38,9 @@
                                         Dessa forma pude retirar esse codigo de validacao ajax do arquivo validation-new tornando-o mais enxuto.
                                         <input type="text" class="input-medium validAlphaNumeric ajaxcheck"  name="url" id='<?php //echo $this->formData['cod_empresa'] ?>' maxlength="10" value="<?php //echo $this->formData['url'] ?>" style="width: 200px;">  -->
 
-                                        <input type="text" class="input-medium validAlphaNumeric RQR required" title='Por favor, indique uma URL.' onblur="checkUrl(this,<?php echo $this->formData['cod_empresa'] ?>);" name="url" maxlength="10" value="<?php echo $this->formData['url'] ?>" style="width: 200px;">
+                                        <input type="text" class="input-medium validAlphaNumeric RQR required" title='Por favor, indique uma URL.' onblur="checkUrl(this, <?php  echo empty($this->empresaId) ? "''" : $this->empresaId?>);" name="url" maxlength="10" value="<?php echo $this->formData['url'] ?>" style="width: 200px;">
+
+
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing' id='spanUrl'></span></div>
                                         <br>
                                         A url é como o site sera acessado pelos seus clientes</td>
