--- a/facapedidos/application/modules/estabelecimento/views/scripts/funcionario/index.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/scripts/funcionario/index.phtml
@@ -34,7 +34,7 @@
       <table class="tableFrm" cellspacing="0" cellpadding="0" border="0">
 
         <tr>
-          <td colspan="2"> Phone Residencial<br>
+          <td colspan="2"> Fone Residencial<br>
             <input type="text" class="input-medium" maxlength="20"  name="telefone_residencial" value="<?php echo $this->formData['telefone_residencial']?>" style="width: 200px;">
             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
           <td colspan="3" style="padding-left: 20px;"> Fone Commercial
@@ -110,7 +110,7 @@
           </tr>
           <tr>
             <td  > Total km<br>
-              <input type="text" class="input-medium validDecimalNumber "  name="total_km" maxlength="20" value="<?php echo $this->formData2['total_km']?>" style="width: 200px;">
+              <input type="text" class="input-medium validNumber "  name="total_km" maxlength="20" value="<?php echo $this->formData2['total_km']?>" style="width: 200px;">
               <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
               </td>
             <td colspan="2"> Numero de acidentes<br>
